--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
   <button id="make-large">Hulkify</button>
   <button id="add-border">Capture it</button>
   <button id="add-rounding">Rounded</button>
-  <<script src="events.js" type="text/javascript"></script>
+  <script src="events.js" type="text/javascript"></script>
 </body>
 </html>
